Fix: Set image overflow

--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,8 @@ footer {
 }
 
 .apps-header img {
+    overflow: hidden;
+    object-fit: contain;
     height: 300px;
 }
 
